# tree-sitter-go-mod

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  libtree-sitter-gomod.so.0  libtree-sitter-gomod.so.0.0  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: gomod.h  tree-sitter-gomod.pc.in
bindings/c/tree_sitter/: tree-sitter-gomod.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gomod/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterGoMod/: gomod.h
bindings/swift/TreeSitterGomodTests/: TreeSitterGomodTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: ignore.txt  replace.txt  tool.txt  toolchain.txt
